# 3DpacmanOpenGL

./: CMakeLists.txt  README.md
assets/levels/: level0  level1
assets/models/: Pacman01.mtl
assets/textures/: Untitled 2.moho
assimp/test/models/glTF2/BoxTextured-glTF/: BoxTextured_out.gltf
include/: camera.hpp  game.hpp  globals.hpp  level.hpp  mesh.hpp  model.hpp  render.hpp  score.hpp  shaderload.hpp  textcontroller.hpp
shaders/: testfragment.frag  testvertex.vert
src/: camera.cpp  game.cpp  level.cpp  main.cpp  mesh.cpp  model.cpp  render.cpp  score.cpp  shaderload.cpp
